--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "typescript": "^4.3.2",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
+  },
+  "dependencies": {
+    "@graphql-yoga/common": "^0.3.0-canary-b431ad4.0",
+    "graphql": "^16.3.0"
   }
 }
