--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Cache pnpm modules
+      uses: actions/cache@v2
+      with:
+        path: ~/.pnpm-store
+        key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-
     - uses: actions/checkout@v2
+    - uses: pnpm/action-setup@v2.1.0
+      with:
+        version: 6.0.2
+        run_install: true
     - name: Install modules
       run: pnpm i
     - name: Run tests
