--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   deploy:
+    environment:
+      name: production
+      url: https://api.league.ml
     runs-on: ubuntu-latest
     name: Deploy
     steps:
