--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,7 @@ jobs:
         run_install: true
     - name: Install modules
       run: pnpm i
+    - name: Build Project
+      run: pnpm run build
     - name: Run tests
       run: pnpm run test
