--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,13 @@ jobs:
             ${{ runner.os }}-
       - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2.1.0
+        name: install_pnpm
         with:
           version: 6.0.2
           run_install: true
+      - name: Add pnpm to PATH
+        run: |
+          echo "${{steps.install_pnpm.outputs.bin_dest}}" >> $GITHUB_PATH
       - name: Publish
         uses: cloudflare/wrangler-action@1.3.0
         with:
