Rework for modules & durable objects

--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "worker-typescript-template",
   "version": "1.0.0",
   "description": "Cloudflare worker TypeScript template",
-  "main": "dist/worker.js", 
+  "main": "dist/index.mjs",
   "packageManager": "pnpm@6.32.3",
   "scripts": {
-    "build": "webpack",
+    "build": "rollup -c",
     "format": "prettier --write  '*.{json,js}' 'src/**/*.{js,ts}' 'test/**/*.{js,ts}'",
-    "lint": "eslint --max-warnings=0 src && prettier --check '*.{json,js}' 'src/**/*.{js,ts}' 'test/**/*.{js,ts}'",
     "test": "jest --config jestconfig.json --verbose"
   },
   "author": "author",
@@ -21,27 +20,28 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^3.0.0",
+    "@rollup/plugin-commonjs": "^17.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@types/jest": "^26.0.23",
-    "@types/service-worker-mock": "^2.0.1",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-config-typescript": "^3.0.0",
     "jest": "^27.5.1",
     "jest-environment-miniflare": "^2.3.0",
     "prettier": "^2.3.0",
-    "service-worker-mock": "^2.0.5",
+    "rollup": "^2.36.1",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
+    "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^27.0.1",
-    "ts-loader": "^9.2.2",
-    "typescript": "^4.3.2",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.0"
+    "tslib": "^2.3.1",
+    "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@graphql-yoga/common": "^0.3.0-canary-b431ad4.0",
+    "@graphql-yoga/common": "0.1.0-beta.4",
     "@pothos/core": "^3.3.3",
-    "dotenv": "^16.0.0",
     "faunadb": "^4.5.2",
     "graphql": "^16.3.0"
   }
