--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,16 @@
 {
   "compilerOptions": {
-    "outDir": "./dist",
-    "module": "commonjs",
     "target": "esnext",
     "lib": ["esnext"],
     "alwaysStrict": true,
     "strict": true,
-    "preserveConstEnums": true,
+    "noEmitOnError": true,
     "moduleResolution": "node",
-    "sourceMap": true,
+    "outDir": "tscOutDir",
+    "preserveConstEnums": true,
     "esModuleInterop": true,
-    "types": [
-      "@cloudflare/workers-types",
-      "@types/jest",
-      "@types/service-worker-mock"
-    ]
+    "types": ["@cloudflare/workers-types", "jest"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "dist", "test"]
+  "exclude": ["node_modules", "dist"]
 }
