--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,9 +8,11 @@ compatibility_date = "2022-03-12"
 [build]
 command = "pnpm install && pnpm run build"
 [build.upload]
-format = "service-worker"
+format = "modules"
+dir = "dist"
+main = "index.mjs"
 
 [durable_objects]
 bindings = [
-  # { name = "RIOT_RATE_LIMIT", class_name = "RateLimiter" }
+  { name = "RIOT_RATE_LIMIT", class_name = "RateLimiter" }
 ]
