Live Riot Data!!

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -9,10 +9,13 @@ compatibility_date = "2022-03-12"
 command = "pnpm install && pnpm run build"
 [build.upload]
 format = "modules"
-dir = "dist"
-main = "index.mjs"
+main = "./index.mjs"
 
 [durable_objects]
 bindings = [
   { name = "RIOT_RATE_LIMIT", class_name = "RateLimiter" }
 ]
+
+[[migrations]]
+tag = "v2"
+new_classes = ["RateLimiter"]
