--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   "dependencies": {
     "@graphql-yoga/common": "0.1.0-beta.4",
     "@pothos/core": "^3.3.3",
-    "graphql": "^16.3.0"
+    "faunadb": "^4.5.2",
+    "graphql": "^16.3.0",
+    "http2": "^3.3.7",
+    "rollup-plugin-polyfill": "^4.0.0"
   }
 }
