--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,6 +5,10 @@ account_id = "9b4e8a5306252de7d3ebd878e5e80e27"
 route = "api.league.ml/*"
 compatibility_date = "2022-03-12"
 
+kv_namespaces = [
+  { binding = "SUMMONER_CACHE", id = "20c9290039e74871a9f4cad2387a0952" }
+]
+
 [build]
 command = "pnpm install && pnpm run build"
 [build.upload]
@@ -15,6 +19,7 @@ main = "./index.mjs"
 bindings = [
   { name = "RIOT_RATE_LIMIT", class_name = "RateLimiter" }
 ]
+
 
 [[migrations]]
 tag = "v2"
